...
            testID="success-check-derived-button"
          >
            {t('wallet.create.check_derivables')}
          </SecondaryButton>
        }
        action={
          <PrimaryButton onPress={onGoToWallet} fullWidth testID="success-go-to-wallet-button">
            {t('wallet.create.go_to_my_wallet')}
          </PrimaryButton>
        }
      />
      <DerivedAccountsSheet {...derivables.sheet} />
    </>
...
